düzenleme geri alındı

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/VisualEditor_-_Icon_-_Menu.svg/2048px-VisualEditor_-_Icon_-_Menu.svg.png"
           title="google uygulamaları"
         />
-        <button class="button" id="button">Oturum Aç</button>
+        <button class="button" id="button">Oturum Açın</button>
       </div>
 
       <div class="orta-container">
